[package]
name = "ai_wargame_web"
version = "0.7.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ai_wargame = { path = "../ai_wargame" }
wasm-bindgen = "0.2"
#rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }
wee_alloc = "0.4.5"
console_error_panic_hook = "0.1.7"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.61", features = ["Document", "Element", "HtmlElement", "Node", "Window"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
