[package]
name = "ai_wargame_web"
version = "0.11.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ai_wargame = { path = "../ai_wargame" }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
